added style to user page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" /> -->
   
+  <!-- bootstrap  -->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
   <!-- Internal JS Dependencies-->
