shadhow to users box and style buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- bootstrap  -->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  
   <!-- Internal JS Dependencies-->
   <script src="./assets/js/app.js"></script>
   <script src="./assets/js/controllers/usersController.js"></script>
