added some desc and img to readme

--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html ng-app="githubUsers">
 <head>
-  <title></title>
+  <meta charset="utf-8">
+
+  <title>Github Users with Angular</title>
 
   <!-- Angular Dependencies-->
   <script src="./bower_components/angular/angular.min.js"></script>
   <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-  <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" /> -->
   
   <!-- bootstrap  -->
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./bower_components/font-awesome/css/font-awesome.min.css">
   
   <!-- Internal JS Dependencies-->
   <script src="./assets/js/app.js"></script>
   <script src="./assets/js/controllers/usersController.js"></script>
   <script src="./assets/js/config/routes.js"></script>
   
-  <!-- Custom CSS  -->
+  <!-- Internal CSS  -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
