--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Github Users with Angular</title>
 
   <!-- Angular Dependencies-->
-  <script src="./bower_components/angular/angular.min.js"></script>
+  <script src="/bower_components/angular/angular.min.js"></script>
   <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   
   <!-- bootstrap  -->
