--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Github Users with Angular</title>
 
   <!-- Angular Dependencies-->
-  <script src="/bower_components/angular/angular.min.js"></script>
-  <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   
   <!-- bootstrap  -->
-  <link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
   
   <!-- Internal JS Dependencies-->
   <script src="./assets/js/app.js"></script>
@@ -19,7 +19,7 @@
   <script src="./assets/js/config/routes.js"></script>
   
   <!-- Internal CSS  -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body data-ng-controller="UsersController as users">
